--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
     sdk: flutter
   image_picker: ^0.8.7+5
   flutter_launcher_icons: ^0.13.1
+  provider: ^6.0.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
